# routes/index.js
@@ -1,4 +1,5 @@
 const routes = require("express").Router();
 routes.use('/', require('./swagger'));
 routes.use("/address", require("./address"))
+routes.use("/client", require("./client"))
 module.exports = routes;
